[gd_scene load_steps=3 format=3 uid="uid://bpfx1p6kn7vm8"]

[ext_resource type="Script" path="res://Entities/Area/MateriaProjectile.gd" id="1_w5vpu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5q4pp"]

[node name="MateriaProjectile" type="Area2D"]
script = ExtResource("1_w5vpu")
metadata/_edit_group_ = true

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5q4pp")

[node name="Sprite2D" type="Sprite2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_hit"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
